syntax_bakup_1115/seal.output
Terminals unused in grammar

   UMINUS


State 22 conflicts: 1 shift/reduce, 18 reduce/reduce
State 25 conflicts: 1 shift/reduce
State 69 conflicts: 16 shift/reduce
State 70 conflicts: 16 shift/reduce
State 71 conflicts: 16 shift/reduce
State 95 conflicts: 16 shift/reduce
State 99 conflicts: 16 shift/reduce
State 100 conflicts: 16 shift/reduce
State 101 conflicts: 16 shift/reduce
State 102 conflicts: 16 shift/reduce
State 103 conflicts: 16 shift/reduce
State 104 conflicts: 16 shift/reduce
State 105 conflicts: 16 shift/reduce
State 106 conflicts: 16 shift/reduce
State 107 conflicts: 16 shift/reduce
State 108 conflicts: 16 shift/reduce
State 109 conflicts: 16 shift/reduce
State 110 conflicts: 16 shift/reduce
State 111 conflicts: 16 shift/reduce
State 112 conflicts: 16 shift/reduce
State 113 conflicts: 16 shift/reduce
State 114 conflicts: 16 shift/reduce


Grammar

    0 $accept: program $end

    1 program: decl_list

    2 decl_list: decl
    3          | decl_list decl

    4 decl: variableDecl
    5     | callDecl

    6 variableDecl: VAR variable ';'

    7 variable: OBJECTID TYPEID

    8 callDecl: FUNC OBJECTID '(' variable_list ')' TYPEID stmtBlock

    9 variable_list: %empty
   10              | variable
   11              | variable_list ',' variable

   12 variableDecl_list: %empty
   13                  | variableDecl_list variableDecl

   14 stmt_list: %empty
   15          | stmt_list stmt

   16 stmtBlock: '{' variableDecl_list stmt_list '}'
   17          | '{' stmt_list '}'
   18          | '{' variableDecl_list '}'
   19          | '{' '}'

   20 stmt: ';'
   21     | expr ';'
   22     | ifStmt
   23     | whileStmt
   24     | forStmt
   25     | breakStmt
   26     | continueStmt
   27     | returnStmt
   28     | stmtBlock

   29 ifStmt: IF expr stmtBlock
   30       | IF expr stmtBlock ELSE stmtBlock

   31 whileStmt: WHILE expr stmtBlock

   32 forStmt: FOR expr ';' expr ';' expr stmtBlock
   33        | FOR expr ';' expr ';' stmtBlock
   34        | FOR expr ';' ';' expr stmtBlock
   35        | FOR ';' expr ';' expr stmtBlock
   36        | FOR ';' ';' expr stmtBlock
   37        | FOR ';' expr ';' stmtBlock
   38        | FOR expr ';' ';' stmtBlock
   39        | FOR ';' ';' stmtBlock

   40 returnStmt: RETURN expr ';'
   41           | RETURN ';'

   42 continueStmt: CONTINUE ';'

   43 breakStmt: BREAK ';'

   44 expr: OBJECTID '=' expr
   45     | CONST_INT
   46     | CONST_FLOAT
   47     | CONST_STRING
   48     | CONST_BOOL
   49     | call
   50     | '(' expr ')'
   51     | OBJECTID
   52     | expr '+' expr
   53     | expr '-' expr
   54     | expr '*' expr
   55     | expr '/' expr
   56     | expr '%' expr
   57     | '-' expr
   58     | expr '<' expr
   59     | expr LE expr
   60     | expr EQUAL expr
   61     | expr NE expr
   62     | expr GE expr
   63     | expr '>' expr
   64     | expr AND expr
   65     | expr OR expr
   66     | expr '^' expr
   67     | '!' expr
   68     | '~' expr
   69     | expr '&' expr
   70     | expr '|' expr

   71 call: OBJECTID '(' actuals ')'

   72 actuals: %empty
   73        | expr
   74        | actuals ',' expr


Terminals, with rules where they appear

$end (0) 0
'!' (33) 67
'%' (37) 56
'&' (38) 69
'(' (40) 8 50 71
')' (41) 8 50 71
'*' (42) 54
'+' (43) 52
',' (44) 11 74
'-' (45) 53 57
'/' (47) 55
';' (59) 6 20 21 32 33 34 35 36 37 38 39 40 41 42 43
'<' (60) 58
'=' (61) 44
'>' (62) 63
'^' (94) 66
'{' (123) 16 17 18 19
'|' (124) 70
'}' (125) 16 17 18 19
'~' (126) 68
error (256)
IF (258) 29 30
ELSE (260) 30
WHILE (261) 31
FOR (262) 32 33 34 35 36 37 38 39
BREAK (263) 43
CONTINUE (264) 42
FUNC (265) 8
RETURN (266) 40 41
CONST_BOOL (267) 48
CONST_INT (268) 45
CONST_STRING (269) 47
CONST_FLOAT (270) 46
VAR (271) 6
AND (274) 64
OR (275) 65
EQUAL (276) 60
NE (277) 61
GE (278) 62
LE (279) 59
OBJECTID (284) 7 8 44 51 71
TYPEID (285) 7 8
UMINUS (287)


Nonterminals, with rules where they appear

$accept (44)
    on left: 0
program (45)
    on left: 1, on right: 0
decl_list (46)
    on left: 2 3, on right: 1 3
decl (47)
    on left: 4 5, on right: 2 3
variableDecl (48)
    on left: 6, on right: 4 13
variable (49)
    on left: 7, on right: 6 10 11
callDecl (50)
    on left: 8, on right: 5
variable_list (51)
    on left: 9 10 11, on right: 8 11
variableDecl_list (52)
    on left: 12 13, on right: 13 16 18
stmt_list (53)
    on left: 14 15, on right: 15 16 17
stmtBlock (54)
    on left: 16 17 18 19, on right: 8 28 29 30 31 32 33 34 35 36 37
    38 39
stmt (55)
    on left: 20 21 22 23 24 25 26 27 28, on right: 15
ifStmt (56)
    on left: 29 30, on right: 22
whileStmt (57)
    on left: 31, on right: 23
forStmt (58)
    on left: 32 33 34 35 36 37 38 39, on right: 24
returnStmt (59)
    on left: 40 41, on right: 27
continueStmt (60)
    on left: 42, on right: 26
breakStmt (61)
    on left: 43, on right: 25
expr (62)
    on left: 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61
    62 63 64 65 66 67 68 69 70, on right: 21 29 30 31 32 33 34 35 36
    37 38 40 44 50 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67
    68 69 70 73 74
call (63)
    on left: 71, on right: 49
actuals (64)
    on left: 72 73 74, on right: 71 74


State 0

    0 $accept: . program $end

    FUNC  shift, and go to state 1
    VAR   shift, and go to state 2

    program       go to state 3
    decl_list     go to state 4
    decl          go to state 5
    variableDecl  go to state 6
    callDecl      go to state 7


State 1

    8 callDecl: FUNC . OBJECTID '(' variable_list ')' TYPEID stmtBlock

    OBJECTID  shift, and go to state 8


State 2

    6 variableDecl: VAR . variable ';'

    OBJECTID  shift, and go to state 9

    variable  go to state 10


State 3

    0 $accept: program . $end

    $end  shift, and go to state 11


State 4

    1 program: decl_list .
    3 decl_list: decl_list . decl

    FUNC  shift, and go to state 1
    VAR   shift, and go to state 2

    $default  reduce using rule 1 (program)

    decl          go to state 12
    variableDecl  go to state 6
    callDecl      go to state 7


State 5

    2 decl_list: decl .

    $default  reduce using rule 2 (decl_list)


State 6

    4 decl: variableDecl .

    $default  reduce using rule 4 (decl)


State 7

    5 decl: callDecl .

    $default  reduce using rule 5 (decl)


State 8

    8 callDecl: FUNC OBJECTID . '(' variable_list ')' TYPEID stmtBlock

    '('  shift, and go to state 13


State 9

    7 variable: OBJECTID . TYPEID

    TYPEID  shift, and go to state 14


State 10

    6 variableDecl: VAR variable . ';'

    ';'  shift, and go to state 15


State 11

    0 $accept: program $end .

    $default  accept


State 12

    3 decl_list: decl_list decl .

    $default  reduce using rule 3 (decl_list)


State 13

    8 callDecl: FUNC OBJECTID '(' . variable_list ')' TYPEID stmtBlock

    OBJECTID  shift, and go to state 9

    $default  reduce using rule 9 (variable_list)

    variable       go to state 16
    variable_list  go to state 17


State 14

    7 variable: OBJECTID TYPEID .

    $default  reduce using rule 7 (variable)


State 15

    6 variableDecl: VAR variable ';' .

    $default  reduce using rule 6 (variableDecl)


State 16

   10 variable_list: variable .

    $default  reduce using rule 10 (variable_list)


State 17

    8 callDecl: FUNC OBJECTID '(' variable_list . ')' TYPEID stmtBlock
   11 variable_list: variable_list . ',' variable

    ')'  shift, and go to state 18
    ','  shift, and go to state 19


State 18

    8 callDecl: FUNC OBJECTID '(' variable_list ')' . TYPEID stmtBlock

    TYPEID  shift, and go to state 20


State 19

   11 variable_list: variable_list ',' . variable

    OBJECTID  shift, and go to state 9

    variable  go to state 21


State 20

    8 callDecl: FUNC OBJECTID '(' variable_list ')' TYPEID . stmtBlock

    '{'  shift, and go to state 22

    stmtBlock  go to state 23


State 21

   11 variable_list: variable_list ',' variable .

    $default  reduce using rule 11 (variable_list)


State 22

   16 stmtBlock: '{' . variableDecl_list stmt_list '}'
   17          | '{' . stmt_list '}'
   18          | '{' . variableDecl_list '}'
   19          | '{' . '}'

    '}'  shift, and go to state 24

    IF            reduce using rule 12 (variableDecl_list)
    IF            [reduce using rule 14 (stmt_list)]
    WHILE         reduce using rule 12 (variableDecl_list)
    WHILE         [reduce using rule 14 (stmt_list)]
    FOR           reduce using rule 12 (variableDecl_list)
    FOR           [reduce using rule 14 (stmt_list)]
    BREAK         reduce using rule 12 (variableDecl_list)
    BREAK         [reduce using rule 14 (stmt_list)]
    CONTINUE      reduce using rule 12 (variableDecl_list)
    CONTINUE      [reduce using rule 14 (stmt_list)]
    RETURN        reduce using rule 12 (variableDecl_list)
    RETURN        [reduce using rule 14 (stmt_list)]
    CONST_BOOL    reduce using rule 12 (variableDecl_list)
    CONST_BOOL    [reduce using rule 14 (stmt_list)]
    CONST_INT     reduce using rule 12 (variableDecl_list)
    CONST_INT     [reduce using rule 14 (stmt_list)]
    CONST_STRING  reduce using rule 12 (variableDecl_list)
    CONST_STRING  [reduce using rule 14 (stmt_list)]
    CONST_FLOAT   reduce using rule 12 (variableDecl_list)
    CONST_FLOAT   [reduce using rule 14 (stmt_list)]
    OBJECTID      reduce using rule 12 (variableDecl_list)
    OBJECTID      [reduce using rule 14 (stmt_list)]
    ';'           reduce using rule 12 (variableDecl_list)
    ';'           [reduce using rule 14 (stmt_list)]
    '('           reduce using rule 12 (variableDecl_list)
    '('           [reduce using rule 14 (stmt_list)]
    '{'           reduce using rule 12 (variableDecl_list)
    '{'           [reduce using rule 14 (stmt_list)]
    '}'           [reduce using rule 12 (variableDecl_list)]
    '}'           [reduce using rule 14 (stmt_list)]
    '-'           reduce using rule 12 (variableDecl_list)
    '-'           [reduce using rule 14 (stmt_list)]
    '!'           reduce using rule 12 (variableDecl_list)
    '!'           [reduce using rule 14 (stmt_list)]
    '~'           reduce using rule 12 (variableDecl_list)
    '~'           [reduce using rule 14 (stmt_list)]
    $default      reduce using rule 12 (variableDecl_list)

    variableDecl_list  go to state 25
    stmt_list          go to state 26


State 23

    8 callDecl: FUNC OBJECTID '(' variable_list ')' TYPEID stmtBlock .

    $default  reduce using rule 8 (callDecl)


State 24

   19 stmtBlock: '{' '}' .

    $default  reduce using rule 19 (stmtBlock)


State 25

   13 variableDecl_list: variableDecl_list . variableDecl
   16 stmtBlock: '{' variableDecl_list . stmt_list '}'
   18          | '{' variableDecl_list . '}'

    VAR  shift, and go to state 2
    '}'  shift, and go to state 27

    '}'       [reduce using rule 14 (stmt_list)]
    $default  reduce using rule 14 (stmt_list)

    variableDecl  go to state 28
    stmt_list     go to state 29


State 26

   15 stmt_list: stmt_list . stmt
   17 stmtBlock: '{' stmt_list . '}'

    IF            shift, and go to state 30
    WHILE         shift, and go to state 31
    FOR           shift, and go to state 32
    BREAK         shift, and go to state 33
    CONTINUE      shift, and go to state 34
    RETURN        shift, and go to state 35
    CONST_BOOL    shift, and go to state 36
    CONST_INT     shift, and go to state 37
    CONST_STRING  shift, and go to state 38
    CONST_FLOAT   shift, and go to state 39
    OBJECTID      shift, and go to state 40
    ';'           shift, and go to state 41
    '('           shift, and go to state 42
    '{'           shift, and go to state 22
    '}'           shift, and go to state 43
    '-'           shift, and go to state 44
    '!'           shift, and go to state 45
    '~'           shift, and go to state 46

    stmtBlock     go to state 47
    stmt          go to state 48
    ifStmt        go to state 49
    whileStmt     go to state 50
    forStmt       go to state 51
    returnStmt    go to state 52
    continueStmt  go to state 53
    breakStmt     go to state 54
    expr          go to state 55
    call          go to state 56


State 27

   18 stmtBlock: '{' variableDecl_list '}' .

    $default  reduce using rule 18 (stmtBlock)


State 28

   13 variableDecl_list: variableDecl_list variableDecl .

    $default  reduce using rule 13 (variableDecl_list)


State 29

   15 stmt_list: stmt_list . stmt
   16 stmtBlock: '{' variableDecl_list stmt_list . '}'

    IF            shift, and go to state 30
    WHILE         shift, and go to state 31
    FOR           shift, and go to state 32
    BREAK         shift, and go to state 33
    CONTINUE      shift, and go to state 34
    RETURN        shift, and go to state 35
    CONST_BOOL    shift, and go to state 36
    CONST_INT     shift, and go to state 37
    CONST_STRING  shift, and go to state 38
    CONST_FLOAT   shift, and go to state 39
    OBJECTID      shift, and go to state 40
    ';'           shift, and go to state 41
    '('           shift, and go to state 42
    '{'           shift, and go to state 22
    '}'           shift, and go to state 57
    '-'           shift, and go to state 44
    '!'           shift, and go to state 45
    '~'           shift, and go to state 46

    stmtBlock     go to state 47
    stmt          go to state 48
    ifStmt        go to state 49
    whileStmt     go to state 50
    forStmt       go to state 51
    returnStmt    go to state 52
    continueStmt  go to state 53
    breakStmt     go to state 54
    expr          go to state 55
    call          go to state 56


State 30

   29 ifStmt: IF . expr stmtBlock
   30       | IF . expr stmtBlock ELSE stmtBlock

    CONST_BOOL    shift, and go to state 36
    CONST_INT     shift, and go to state 37
    CONST_STRING  shift, and go to state 38
    CONST_FLOAT   shift, and go to state 39
    OBJECTID      shift, and go to state 40
    '('           shift, and go to state 42
    '-'           shift, and go to state 44
    '!'           shift, and go to state 45
    '~'           shift, and go to state 46

    expr  go to state 58
    call  go to state 56


State 31

   31 whileStmt: WHILE . expr stmtBlock

    CONST_BOOL    shift, and go to state 36
    CONST_INT     shift, and go to state 37
    CONST_STRING  shift, and go to state 38
    CONST_FLOAT   shift, and go to state 39
    OBJECTID      shift, and go to state 40
    '('           shift, and go to state 42
    '-'           shift, and go to state 44
    '!'           shift, and go to state 45
    '~'           shift, and go to state 46

    expr  go to state 59
    call  go to state 56


State 32

   32 forStmt: FOR . expr ';' expr ';' expr stmtBlock
   33        | FOR . expr ';' expr ';' stmtBlock
   34        | FOR . expr ';' ';' expr stmtBlock
   35        | FOR . ';' expr ';' expr stmtBlock
   36        | FOR . ';' ';' expr stmtBlock
   37        | FOR . ';' expr ';' stmtBlock
   38        | FOR . expr ';' ';' stmtBlock
   39        | FOR . ';' ';' stmtBlock

    CONST_BOOL    shift, and go to state 36
    CONST_INT     shift, and go to state 37
    CONST_STRING  shift, and go to state 38
    CONST_FLOAT   shift, and go to state 39
    OBJECTID      shift, and go to state 40
    ';'           shift, and go to state 60
    '('           shift, and go to state 42
    '-'           shift, and go to state 44
    '!'           shift, and go to state 45
    '~'           shift, and go to state 46

    expr  go to state 61
    call  go to state 56


State 33

   43 breakStmt: BREAK . ';'

    ';'  shift, and go to state 62


State 34

   42 continueStmt: CONTINUE . ';'

    ';'  shift, and go to state 63


State 35

   40 returnStmt: RETURN . expr ';'
   41           | RETURN . ';'

    CONST_BOOL    shift, and go to state 36
    CONST_INT     shift, and go to state 37
    CONST_STRING  shift, and go to state 38
    CONST_FLOAT   shift, and go to state 39
    OBJECTID      shift, and go to state 40
    ';'           shift, and go to state 64
    '('           shift, and go to state 42
    '-'           shift, and go to state 44
    '!'           shift, and go to state 45
    '~'           shift, and go to state 46

    expr  go to state 65
    call  go to state 56


State 36

   48 expr: CONST_BOOL .

    $default  reduce using rule 48 (expr)


State 37

   45 expr: CONST_INT .

    $default  reduce using rule 45 (expr)


State 38

   47 expr: CONST_STRING .

    $default  reduce using rule 47 (expr)


State 39

   46 expr: CONST_FLOAT .

    $default  reduce using rule 46 (expr)


State 40

   44 expr: OBJECTID . '=' expr
   51     | OBJECTID .
   71 call: OBJECTID . '(' actuals ')'

    '='  shift, and go to state 66
    '('  shift, and go to state 67

    $default  reduce using rule 51 (expr)


State 41

   20 stmt: ';' .

    $default  reduce using rule 20 (stmt)


State 42

   50 expr: '(' . expr ')'

    CONST_BOOL    shift, and go to state 36
    CONST_INT     shift, and go to state 37
    CONST_STRING  shift, and go to state 38
    CONST_FLOAT   shift, and go to state 39
    OBJECTID      shift, and go to state 40
    '('           shift, and go to state 42
    '-'           shift, and go to state 44
    '!'           shift, and go to state 45
    '~'           shift, and go to state 46

    expr  go to state 68
    call  go to state 56


State 43

   17 stmtBlock: '{' stmt_list '}' .

    $default  reduce using rule 17 (stmtBlock)


State 44

   57 expr: '-' . expr

    CONST_BOOL    shift, and go to state 36
    CONST_INT     shift, and go to state 37
    CONST_STRING  shift, and go to state 38
    CONST_FLOAT   shift, and go to state 39
    OBJECTID      shift, and go to state 40
    '('           shift, and go to state 42
    '-'           shift, and go to state 44
    '!'           shift, and go to state 45
    '~'           shift, and go to state 46

    expr  go to state 69
    call  go to state 56


State 45

   67 expr: '!' . expr

    CONST_BOOL    shift, and go to state 36
    CONST_INT     shift, and go to state 37
    CONST_STRING  shift, and go to state 38
    CONST_FLOAT   shift, and go to state 39
    OBJECTID      shift, and go to state 40
    '('           shift, and go to state 42
    '-'           shift, and go to state 44
    '!'           shift, and go to state 45
    '~'           shift, and go to state 46

    expr  go to state 70
    call  go to state 56


State 46

   68 expr: '~' . expr

    CONST_BOOL    shift, and go to state 36
    CONST_INT     shift, and go to state 37
    CONST_STRING  shift, and go to state 38
    CONST_FLOAT   shift, and go to state 39
    OBJECTID      shift, and go to state 40
    '('           shift, and go to state 42
    '-'           shift, and go to state 44
    '!'           shift, and go to state 45
    '~'           shift, and go to state 46

    expr  go to state 71
    call  go to state 56


State 47

   28 stmt: stmtBlock .

    $default  reduce using rule 28 (stmt)


State 48

   15 stmt_list: stmt_list stmt .

    $default  reduce using rule 15 (stmt_list)


State 49

   22 stmt: ifStmt .

    $default  reduce using rule 22 (stmt)


State 50

   23 stmt: whileStmt .

    $default  reduce using rule 23 (stmt)


State 51

   24 stmt: forStmt .

    $default  reduce using rule 24 (stmt)


State 52

   27 stmt: returnStmt .

    $default  reduce using rule 27 (stmt)


State 53

   26 stmt: continueStmt .

    $default  reduce using rule 26 (stmt)


State 54

   25 stmt: breakStmt .

    $default  reduce using rule 25 (stmt)


State 55

   21 stmt: expr . ';'
   52 expr: expr . '+' expr
   53     | expr . '-' expr
   54     | expr . '*' expr
   55     | expr . '/' expr
   56     | expr . '%' expr
   58     | expr . '<' expr
   59     | expr . LE expr
   60     | expr . EQUAL expr
   61     | expr . NE expr
   62     | expr . GE expr
   63     | expr . '>' expr
   64     | expr . AND expr
   65     | expr . OR expr
   66     | expr . '^' expr
   69     | expr . '&' expr
   70     | expr . '|' expr

    AND    shift, and go to state 72
    OR     shift, and go to state 73
    EQUAL  shift, and go to state 74
    NE     shift, and go to state 75
    GE     shift, and go to state 76
    LE     shift, and go to state 77
    ';'    shift, and go to state 78
    '+'    shift, and go to state 79
    '-'    shift, and go to state 80
    '*'    shift, and go to state 81
    '/'    shift, and go to state 82
    '%'    shift, and go to state 83
    '<'    shift, and go to state 84
    '>'    shift, and go to state 85
    '^'    shift, and go to state 86
    '&'    shift, and go to state 87
    '|'    shift, and go to state 88


State 56

   49 expr: call .
